pipelines/nifi/ovelays/production/nifi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifi
  namespace: pipelines
spec:
  rules:
    - host: nifi.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: nifi-web
                port:
                  number: 8443
            path: /nifi
            pathType: Prefix
          - backend:
              service:
                name: nifi-web
                port:
                  number: 8443
            path: /nifi-api
            pathType: Prefix
  tls:
    - hosts:
        - nifi.contextsuite.com
      secretName: star-contextsuite-com
